--- a/wukong.ini
+++ b/wukong.ini
@@ -24,7 +24,7 @@ ruleset=⛔️ 不走代理,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⛔️ 不走代理`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]⛔️ 不走代理`[]🇺🇸 美国分组`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]⛔️ 不走代理`.*
